# MultitoolV2

./: .gitignore  .prettierignore  BACKGROUND_SERVICE.md  BUILD.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  VERSIONING.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json  tauri.portable.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/scripts/: background_service.rs  background_service_preferences.rs  blueprint_family.rs  blueprint_manual_owned.rs  blueprint_wishlist.rs  blueprints_catalog.rs  blueprints_item_profile.rs  blueprints_wiki_extended.rs  cache_functions.rs  game_config_backup.rs  gamelog_archive.rs  gamelog_watcher.rs  gamepath.rs  hangar_exec.rs  home_dashboard.rs  local_characters_functions.rs  mod.rs  onboarding.rs  paints_catalog.rs  patchnote.rs  presets_list_functions.rs  recent_routes.rs  rsi_news.rs  rsi_status.rs  startup_manager.rs  system_tray.rs  theme_preferences.rs  translation_functions.rs  translation_preferences.rs  translations_links.rs  vehicles_catalog.rs
src-tauri/src/scripts/game_log/: cache.rs  catalog.rs  commands.rs  engine.rs  io.rs  mod.rs  parse.rs  patterns.rs  progress.rs  scan_state.rs  session.rs  snapshot.rs
src-tauri/src/scripts/game_log/extractors/: blueprints.rs  missions.rs  mod.rs  piloting.rs  (+4 more)
src-tauri/src/scripts/system_metrics/: gpu_adlx.rs  gpu_nvml.rs  gpu_wmi.rs  mod.rs
(+362 files in other folders)
