[package]
name = "sandbox"
version = "2.7.6"
description = "A Tauri App"
authors = ["Logan Wilquin"]
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sandbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4"
tokio = { version = "1.40.0", features = ["full"] }
urlencoding = "2.1.3"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2"
dirs = "6.0.0"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
once_cell = "1.20"
zip = "2"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
auto-launch = "0.5.0"
wmi = "0.14"
nvml-wrapper = "0.12"
adlx = "0.0.0-alpha.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
